# find-rpt

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_LOG.md  README.md  REVIEWER_GUIDE.md  SUBMISSION_CHECKLIST.md  find-rpt.example.toml  pyproject.toml
.agents/skills/find-rpt/: SKILL.md
.agents/skills/find-rpt/agents/: openai.yaml
.claude/commands/: find-rpt.md
development-notes/: AI_ASSISTED_DEVELOPMENT.md  TRANSCRIPT_EXPORT.md
docs/: decisions.md  discovery.md  evaluation.md  requirements.md
examples/: README.md  command-transcript-template.md  complete-brief.md  escalation.md  local-real-corpus.md  not-found.md  screenshot-checklist.md  synthetic-runs.md
scripts/: redact_example.py  smoke_test.py
skills/find-rpt/: SKILL.md
skills/find-rpt/agents/: openai.yaml
skills/find-rpt/references/: output-contract.md
skills/find-rpt/scripts/: find_rpt.py
src/find_rpt/: __init__.py  brief.py  citations.py  cli.py  escalation.py  evidence.py  metadata.py  rationale.py  retrieval.py  revisions.py
tests/: evaluation_cases.json  revision_evaluation_cases.json  test_agent_hosted.py  test_brief.py  test_citations.py  test_corpus_evaluation.py  test_escalation.py  test_evidence.py  test_rationale.py  test_retrieval.py  test_revisions.py  test_skill_packaging.py
