[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "find-rpt"
version = "0.1.0"
description = "Deterministic local retrieval for a sell-side research PDF corpus"
requires-python = ">=3.11"
dependencies = ["pypdf>=6,<7", "PyMuPDF>=1.26,<2"]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
find-rpt = "find_rpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
